--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     <h1></h1>
                     <p class="texto__parrafo"></p>
                 </div>
-                <input type="number" min="1" max="10" class="container__input">
+                <input type="number" id="valorUsuario" min="1" max="10" class="container__input">
                 <div class="chute container__botones">
-                    <button onclick="verificarIntento();" class="container__boton" id="valorUsuario">Intentar</button>
+                    <button onclick="verificarIntento();" class="container__boton" >Intentar</button>
                     <button onclick="reiniciarJuego();" class="container__boton" id="reiniciar" >Nuevo juego</button>
                 </div>
             </div>
